force-app/main/default/objects/Service_Report__c/Service_Report__c.object-meta.xml
<CustomObject>
    <label>Service Report</label>
    <nameField>
        <label>Service Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>