force-app/main/default/objects/Service_Report__c/fields/Completion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Completion_Notes__c</fullName>
    <label>Completion Notes</label>
    <type>TextArea</type>
</CustomField>