force-app/main/default/objects/Service_Report__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Service Reports</relationshipLabel>
    <relationshipName>Service_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>